# rampa

./: .codecov.yml  .tmuxp.yaml  .tool-versions  AGENTS.md  CHANGES  LICENSE  README.md  conftest.py  justfile  pyproject.toml
.github/actions/rampa-benchmark/: action.yml
.github/workflows/: docs.yml  tests.yml
docs/: AGENTS.md  conf.py  index.md  justfile
docs/_ext/: rampa_fastmcp.py
docs/_ext/widgets/: __init__.py  _assets.py  _base.py  _directive.py  _discovery.py  _prehydrate.py  cli_install.py  library_install.py  mcp_install.py
docs/_static/css/: project-cards.css
docs/_widgets/cli-install/: widget.css  widget.html  widget.js
docs/_widgets/library-install/: widget.css  widget.html  widget.js
docs/_widgets/mcp-install/: widget.css  widget.html  widget.js
docs/adrs/: 001-pure-python-rust-accelerator-module-compatibility-requirements.md  002-native-boundary-and-execution-architecture.md  002-native-boundary-execution-engine-architecture.md  003-load-testing-native-execution-pitfalls.md  004-self-harnessing-deterministic-self-testing.md  005-self-benchmarking-baselines-and-regression-detection.md  006-self-profiling-one-command-and-integrity.md  007-target-capabilities-and-aspirations.md  008-scenario-and-plan-api.md  009-operation-attempt-records-and-events.md  010-execution-and-scheduling-model.md  011-protocol-and-adapter-engines.md  012-metric-engine-thresholds-and-aggregation.md  013-execution-drivers-and-distributed-control-plane.md  014-browser-profiling-and-external-tool-adapters.md  015-project-owned-benchmark-suites-and-profile-adapters.md  index.md
docs/cli/: check.md  doctor.md  index.md  inspect.md  reference.md  run.md
docs/dev/: benchmark.md  index.md  rust-expansion.md
docs/getting-started/: index.md  installation.md
docs/mcp/: index.md  reference.md  resources.md  tools.md
docs/pytest/: index.md  reference.md
notes/analyses/: 00-taxonomy.md  10-locust.md  11-jmeter.md  12-vegeta.md  13-hey.md  14-wrk.md  15-artillery.md  16-goose.md  17-k6.md  20-engines-and-scheduling.md  21-metric-data-structures.md  22-distributed-and-aggregation.md  23-control-plane-and-execution-drivers.md  README.md
rust/: Cargo.toml
rust/src/: histogram.rs  lib.rs  metric_core.rs  rate_controller.rs
scripts/: README.md  __init__.py  _bench_common.py  bench_http_local.py  bench_metrics.py  bench_scheduler.py  bench_throughput.py  mcp_swap.py
src/rampa/: __init__.py  _core.pyi  _types.py  bus.py  cli.py  config.py  context.py  engine.py  errors.py  events.py  http.py  loader.py  metrics.py  output.py  pause.py  pytest_plugin.py  rate_controller.py  runner.py  thresholds.py  unittest_plugin.py  worker.py
src/rampa/ci/: __init__.py  __main__.py  compare.py
src/rampa/cli/: __init__.py  _colors.py  _formatter.py  _progress.py  check.py  doctor.py  inspect.py  run.py
src/rampa/distributed/: __init__.py  archive.py  coordinator.py  protocol.py  segment.py  worker_client.py
src/rampa/executors/: __init__.py  constant_arrival_rate.py  constant_vus.py  per_vu_iterations.py  ramping_arrival_rate.py  ramping_vus.py  shared_iterations.py
src/rampa/mcp/: __init__.py  __main__.py  registry.py  resources.py  server.py
src/rampa/mcp/tools/: __init__.py  discovery.py  metrics.py  runs.py  thresholds.py
src/rampa/outputs/: __init__.py  console.py  csv.py  github.py  influxdb.py  json.py  otel.py  prometheus.py  webhook.py
src/rampa/protocols/: __init__.py  grpc.py  websocket.py
src/rampa/tui/: __init__.py  _dashboard.py  app.py
tests/: __init__.py  conftest.py  test_bench.py  test_bus.py  test_cli.py  test_config.py  test_docs_contracts.py  test_docs_examples.py  test_e2e.py  test_engine.py  test_executor_arrival_rate.py  test_executor_constant_vus.py  test_executor_per_vu_iterations.py  test_executor_ramping_arrival_rate.py  test_executor_ramping_vus.py  test_executor_shared_iterations.py  test_hdr.py  test_http.py  test_mcp_install_clients.py  test_mcp_registry.py  test_mcp_resources.py  test_mcp_swap.py  test_mcp_tools.py  test_metric_core_parity.py  test_metrics.py  test_output.py  test_outputs.py  test_pytest_plugin.py  test_rate_controller.py  test_thresholds.py  test_worker.py
tests/cli/: test_colors.py  test_formatter.py
