[project]
name = "rampa"
version = "0.0.1a1.dev0"
description = "Load testing framework"
requires-python = ">=3.14,<4.0"
authors = [
  {name = "Tony Narlock", email = "tony@git-pull.com"}
]
license = { text = "MIT" }
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX",
  "Operating System :: MacOS :: MacOS X",
  "Intended Audience :: Developers",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Software Development :: Testing",
  "Topic :: System :: Benchmark",
  "Typing :: Typed",
]

keywords = ["load-test", "benchmark", "http", "testing"]
readme = "README.md"
packages = [
  { include = "*", from = "src" },
]
include = [
  { path = "tests", format = "sdist" },
  { path = "docs", format = "sdist" },
  { path = "conftest.py", format = "sdist" },
]

dependencies = [
  "pydantic>=2.0",
  "aiohttp>=3.9",
]

[project.optional-dependencies]
mcp = ["fastmcp>=2.0"]
tui = ["textual>=3.0"]
grpc = ["grpcio>=1.70"]

[project.scripts]
rampa = "rampa.cli:main"
rampa-mcp = "rampa.mcp.server:main"

[project.entry-points."pytest11"]
rampa = "rampa.pytest_plugin"

[project.urls]
"Bug Tracker" = "https://github.com/tony/rampa/issues"
Repository = "https://github.com/tony/rampa"

[dependency-groups]
dev = [
  # Docs
  "gp-sphinx==0.0.1a26",
  "sphinx-autodoc-api-style==0.0.1a26",
  "sphinx-autodoc-fastmcp==0.0.1a26",
  "sphinx-autodoc-argparse==0.0.1a26",
  "sphinx-autodoc-pytest-fixtures==0.0.1a26",
  "sphinx-autobuild",
  "fastmcp>=2.0",
  # Testing
  "pytest",
  "pytest-rerunfailures",
  "pytest-watcher",
  # Build (Rust extension)
  "maturin>=1.0,<2.0",
  # Scripts
  "tomlkit>=0.13",
  # Lint / typecheck (extras needed for ty resolution)
  "textual>=3.0",
  "grpcio>=1.70",
  "ruff",
  "ty>=0.0.35",
]
docs = [
  "gp-sphinx==0.0.1a26",
  "sphinx-autodoc-api-style==0.0.1a26",
  "sphinx-autodoc-fastmcp==0.0.1a26",
  "sphinx-autodoc-argparse==0.0.1a26",
  "sphinx-autodoc-pytest-fixtures==0.0.1a26",
  "sphinx-autobuild",
  "fastmcp>=2.0",
]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.uv]
cache-keys = [
  {file = "pyproject.toml"},
  {file = "rust/Cargo.toml"},
  {file = "rust/src/**/*.rs"},
]

[tool.uv.exclude-newer-package]
gp-furo-theme = false
gp-sphinx = false
sphinx-autodoc-api-style = false
sphinx-autodoc-argparse = false
sphinx-autodoc-docutils = false
sphinx-autodoc-fastmcp = false
sphinx-autodoc-pytest-fixtures = false
sphinx-autodoc-sphinx = false
sphinx-autodoc-typehints-gp = false
sphinx-fonts = false
sphinx-gp-llms = false
sphinx-gp-opengraph = false
sphinx-gp-sitemap = false
sphinx-gp-theme = false
sphinx-ux-autodoc-layout = false
sphinx-ux-badges = false

[tool.maturin]
manifest-path = "rust/Cargo.toml"
module-name = "rampa._core"
python-source = "src"
compatibility = "manylinux_2_34"

[tool.ty.environment]
python-version = "3.14"

[tool.ty.src]
include = [
  "src",
  "tests",
]

[tool.ty.terminal]
error-on-warning = true

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "docs/conf.py",
  "tests/test_*.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise NotImplementedError",
  "return NotImplemented",
  "def parse_args",
  "if TYPE_CHECKING:",
  "if t.TYPE_CHECKING:",
  "@overload( |$)",
  'class .*\bProtocol\):',
  "from __future__ import annotations",
  "import typing as t",
  "^\\s*\\.\\.\\.$",
  "^\\s*pass$",
  "^\\s*assert ",
  "^\\s*logger\\s*=",
  "^import ",
  "^from .* import",
  ": TypeAlias = ",
  "= t\\.TypeVar\\(",
]

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = [
  "E", # pycodestyle
  "F", # pyflakes
  "I", # isort
  "UP", # pyupgrade
  "A", # flake8-builtins
  "B", # flake8-bugbear
  "C4", # flake8-comprehensions
  "COM", # flake8-commas
  "EM", # flake8-errmsg
  "Q", # flake8-quotes
  "PTH", # flake8-use-pathlib
  "SIM", # flake8-simplify
  "TRY", # Trycertatops
  "PERF", # Perflint
  "RUF", # Ruff-specific rules
  "D", # pydocstyle
  "FA100",  # future annotations
]
ignore = [
  "COM812", # missing trailing comma, ruff format conflict
]
extend-safe-fixes = [
  "UP006",
  "UP007",
]
pyupgrade.keep-runtime-typing = false

[tool.ruff.lint.isort]
known-first-party = [
  "rampa",
]
combine-as-imports = true
required-imports = [
  "from __future__ import annotations",
]

[tool.ruff.lint.flake8-builtins]
builtins-allowed-modules = [
  "dataclasses",
  "random",
  "types",
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"*/__init__.py" = ["F401"]

[tool.pytest.ini_options]
addopts = [
  "--tb=short",
  "--no-header",
  "--showlocals",
  "--doctest-modules",
]
doctest_optionflags = [
  "ELLIPSIS",
  "NORMALIZE_WHITESPACE",
]
testpaths = [
  "src/rampa",
  "tests",
]
